# mlops2025

lesson2/seminar/step5_homework_model_validation_and_metrics/: .pre-commit-config.yaml  Makefile  params.yaml  pyproject.toml
lesson2/seminar/step5_homework_model_validation_and_metrics/.dvc/tmp/: lock
lesson2/seminar/step5_homework_model_validation_and_metrics/reports/validation/: index.html
lesson2/seminar/step5_homework_model_validation_and_metrics/src/: evaluate.py  validate_data.py  validate_model.py
