[tool.poetry]
name = "step5-model-validation-and-metrics"
version = "0.1.0"
description = "Model validation and metrics pipeline with DVC"
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "~2.2"
scikit-learn = "~1.5"
dvc = "~3.50"
great-expectations = "~0.18"
pyyaml = "~6.0"
pathspec = ">=0.9,<1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.4"
isort = "^5.13"
pre-commit = "^3.7"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
